<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
  
    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_menu_settings"
        android:title="@string/action_menu_settings" />

    <!--<item
        android:id="@+id/rate"
        android:icon="@drawable/ic_menu_rate"
        android:title="@string/action_menu_rate" />-->

    <item
        android:id="@+id/github"
        android:icon="@drawable/ic_github"
        android:title="@string/action_menu_github" />

    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_menu_share"
        android:title="@string/action_menu_share" />

    <item
        android:id="@+id/more_apps"
        android:icon="@drawable/ic_rmenu_more_apps"
        android:title="@string/action_menu_more_apps" />
</menu>