<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AlwaysShowAction">
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_round_delete_24"
        android:title="@string/delete"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_round_share_24"
        android:title="@string/share"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_move"
        android:icon="@drawable/ic_round_drive_file_move_24"
        android:title="@string/move_to_gallery"
        app:showAsAction="always" />
</menu>