<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.PermissionFragment">

    <ImageView
        android:id="@+id/illustration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:importantForAccessibility="no"
        android:paddingHorizontal="64dp"
        android:src="@drawable/ic_folder_illustration"
        app:layout_constraintBottom_toTopOf="@+id/permission_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/permission_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="24dp"
        android:paddingHorizontal="48dp"
        android:text="@string/permission_message"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/exit_button"
        app:layout_constraintEnd_toEndOf="@+id/illustration"
        app:layout_constraintStart_toStartOf="@+id/illustration"
        app:layout_constraintTop_toBottomOf="@+id/illustration" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/exit_button"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/exit"
        app:cornerRadius="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/allow_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/permission_message" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/allow_button"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:text="@string/allow"
        app:cornerRadius="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/exit_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/exit_button"
        app:layout_constraintTop_toTopOf="@+id/exit_button" />

</androidx.constraintlayout.widget.ConstraintLayout>