<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:paddingHorizontal="24dp"
    android:paddingVertical="16dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/ic_round_delete_24"
        android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Delete files?" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/dialog_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_title"
        tools:text="You are about to delete the selected files permanently. This action can not be undone. Do you want to continue?" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/dialog_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:button="@drawable/circle_checkbox"
        android:paddingHorizontal="8dp"
        android:text="@string/keep_one_copy_of_each"
        app:layout_constraintEnd_toEndOf="@id/dialog_message"
        app:layout_constraintStart_toStartOf="@id/dialog_message"
        app:layout_constraintTop_toBottomOf="@id/dialog_message" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/negative_button"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/positive_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_checkbox"
        tools:text="Cancel" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/positive_button"
        style="@style/Widget.Material3.Button.UnelevatedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/negative_button"
        app:layout_constraintTop_toBottomOf="@id/dialog_checkbox" />

</androidx.constraintlayout.widget.ConstraintLayout>